<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/bg"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/layout_background"
    android:orientation="vertical">
    <RelativeLayout
        android:id="@+id/frame_account"
        android:layout_width="match_parent"
        android:layout_height="59dp"
        android:background="@drawable/layout_light_purple">
        <TextView
            android:id="@+id/account"
            android:layout_width="wrap_content"
            android:textStyle="bold"
            android:layout_height="wrap_content"
            android:textColor="#411A66"
            android:text="@string/account"
            android:textAppearance="@style/char20purple"
            android:layout_centerInParent="true"
            />
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/frame_1"
        android:layout_width="match_parent"
        android:layout_height="100dp">
        <TextView
            android:id="@+id/current_id"
            android:layout_width="wrap_content"
            android:textColor="#411A66"
            android:textStyle="bold"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp"
            android:text="@string/current_id_text"
            android:textAppearance="@style/char20purple"
            />
        <TextView
            android:id="@+id/user_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:layout_toEndOf="@id/current_id"
            android:layout_alignBottom="@id/current_id"
            android:layout_centerVertical="true"
            android:layout_alignEnd="@id/user_id"
            android:layout_marginStart="10dp"
            android:text="@string/id"
            android:textAppearance="@style/char20green"
            android:gravity="bottom"
            />
        <ImageView
            android:id="@+id/user_img"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginEnd="20dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:contentDescription="@string/img_user"
            android:src="@drawable/img_id_green"/>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/frame_3"
        android:layout_width="match_parent"
        android:layout_height="100dp">
        <TextView
            android:id="@+id/info_edit"
            android:layout_width="wrap_content"
            android:textStyle="bold"

            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:textColor="#411A66"
            android:layout_centerVertical="true"
            android:text="@string/info_edit"
            android:textAppearance="@style/char20purple"
            />
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/frame_4"
        android:layout_width="match_parent"
        android:layout_height="100dp">
        <TextView
            android:id="@+id/logout"
            android:layout_width="wrap_content"
            android:textStyle="bold"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:textColor="#411A66"
            android:layout_centerVertical="true"
            android:text="@string/logout"
            android:textAppearance="@style/char20purple"
            />
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/frame_5"
        android:layout_width="match_parent"
        android:layout_height="100dp">
        <TextView
            android:id="@+id/leave_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_centerVertical="true"
            android:textStyle="bold"
            android:text="@string/leave"
            android:textAppearance="@style/char20red"
            />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:background="#FFFFFF"
        android:elevation="8dp">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center">
            <ImageView
                android:id="@+id/imageHomeOne"
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:src="@drawable/img_home"
                android:contentDescription="@string/lowbar_home"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center">
            <ImageView
                android:id="@+id/imageWhatidoOne"
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:src="@drawable/img_what_i_do"
                android:contentDescription="@string/lowbar_build"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center">
            <ImageView
                android:id="@+id/imageAutomaticOne"
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:src="@drawable/img_automatic"
                android:contentDescription="@string/lowbar_setting"/>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>