<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/exit_bg"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/layout_background"
    android:elevation="4dp">

    <!-- 상단 타이틀 바 -->
    <RelativeLayout
        android:id="@+id/delete_frame"
        android:layout_width="match_parent"
        android:layout_height="59dp"
        android:background="#FFFFFF"/>

    <TextView
        android:id="@+id/really"
        android:layout_width="wrap_content"
        android:layout_height="27dp"
        android:layout_below="@id/delete_frame"
        android:layout_marginTop="38dp"
        android:layout_centerHorizontal="true"
        android:text="@string/really"
        android:textAppearance="@style/char20purple"
        android:gravity="center_horizontal|top"/>

    <TextView
        android:id="@+id/donot"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/really"
        android:layout_marginTop="38dp"
        android:layout_marginHorizontal="50dp"
        android:text="@string/donot"
        android:textAppearance="@style/char16black"
        android:gravity="center_horizontal|top"/>

    <RelativeLayout
        android:id="@+id/frame"
        android:layout_width="321dp"
        android:layout_height="44dp"
        android:layout_below="@id/donot"
        android:layout_marginTop="110dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/layout_red">
        <TextView
            android:id="@+id/out"
            android:layout_width="63dp"
            android:layout_height="18dp"
            android:layout_centerInParent="true"
            android:layout_marginTop="13dp"
            android:text="@string/userout"
            android:textAppearance="@style/char15white"/>
    </RelativeLayout>

    <!-- *** 여기 하단바는 이렇게만!! *** -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:background="#FFFFFF"
        android:elevation="8dp">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center">
            <ImageView
                android:id="@+id/imageHomeOne"
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:src="@drawable/img_home"
                android:contentDescription="@string/lowbar_home"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center">
            <ImageView
                android:id="@+id/imageWhatidoOne"
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:src="@drawable/img_what_i_do"
                android:contentDescription="@string/lowbar_build"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center">
            <ImageView
                android:id="@+id/imageAutomaticOne"
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:src="@drawable/img_automatic"
                android:contentDescription="@string/lowbar_setting"/>
        </LinearLayout>
    </LinearLayout>


</RelativeLayout>
