<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="#FFFFFF"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ScrollView
        android:clipToPadding="false"
        android:id="@+id/rq38jh479imh"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@drawable/layout_background"
        android:paddingTop="1dp"
        android:elevation="4dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <RelativeLayout
                android:id="@+id/ryfm82ge0nhd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/layout_rectangle"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/rykyxl401xz"
                    android:textColor="#411A66"
                    android:textSize="20sp"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/setting"
                    />
            </RelativeLayout>
            <LinearLayout
                android:id="@+id/r0t9pbja9ov3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:paddingVertical="9dp"
                android:paddingHorizontal="11dp"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/rvuqc4pxed8"
                    android:textColor="#411A66"
                    android:textSize="20sp"
                    android:layout_marginEnd="4dp"
                    android:layout_height="wrap_content"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:text="@string/darkmode"
                    />
                <ImageView
                    android:id="@+id/darkmode_toggle"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:contentDescription="@string/toggle_button"
                    android:src="@drawable/img_toggle_button"
                    android:scaleType="fitXY"
                    />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/r68pczcg218h"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:background="@drawable/layout_rectangle"
                android:paddingVertical="9dp"
                android:paddingHorizontal="11dp"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/rj3n2jhecxuq"
                    android:textColor="#411A66"
                    android:textSize="20sp"
                    android:layout_height="wrap_content"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:text="@string/old_mode"
                    />

                <ImageView
                    android:id="@+id/oldmode_toggle"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:contentDescription="@string/toggle_button"
                    android:src="@drawable/img_toggle_button"
                    android:scaleType="fitXY"
                    />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/rw2dwjbete5n"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="36dp"
                android:paddingHorizontal="19dp"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/rcb8vdq69j48"
                    android:textColor="#411A66"
                    android:textSize="20sp"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="@string/account_setting"
                    />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/rlihl80sai8d"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/layout_rectangle"
                android:paddingVertical="42dp"
                android:paddingHorizontal="19dp"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/rtofe1f71bhj"
                    android:textColor="#411A66"
                    android:textSize="20sp"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="@string/developer"
                    />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/r0u75olz1thgn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="39dp"
                android:paddingHorizontal="10dp"
                android:layout_marginBottom="13dp"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/r87y1qmmazxq"
                    android:textColor="#411A66"
                    android:textSize="20sp"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="뭐넣지"
                    />
            </LinearLayout>

            <LinearLayout android:id="@+id/linearRowhomeOne"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginHorizontal="16dp"
                android:orientation="horizontal">
                <ImageView android:id="@+id/imageHomeOne"
                    android:layout_gravity="center"
                    android:layout_height="40dp"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:contentDescription="@string/lowbar_home"
                    android:src="@drawable/img_home"/>
                <View android:background="#30000000"
                    android:id="@+id/lineLineoneOne"
                    android:layout_height="59dp" android:layout_width="1dp"/>
                <ImageView android:id="@+id/imageWhatidoOne"
                    android:layout_gravity="center"
                    android:layout_height="40dp"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:contentDescription="@string/lowbar_build"
                    android:src="@drawable/img_what_i_do"/>
                <View android:background="#30000000"
                    android:id="@+id/lineLineoneThree"
                    android:layout_height="59dp" android:layout_width="1dp"/>
                <ImageView android:id="@+id/imageAutomaticOne"
                    android:layout_gravity="center"
                    android:layout_height="40dp"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:contentDescription="@string/lowbar_setting"
                    android:src="@drawable/img_automatic"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>